src/sass/pm-checkbox.scss
// REGULAR
body {
	.pm_checkbox {
		input[type="checkbox"] {
			margin: 13px 10px 0 0;
		}
	}
	.conversation {
		.fa-square-o,
		.fa-check-square {
			display: none !important;
		}
	}
}

// MOBILE
body.mobileMode {
	#body {
		#pm_main{
			label.pm_checkbox,
			input[type="checkbox"] {
		    	top: 0;
    	    left: 0;
    	    height: 100%;
    	    width: 100%;
    	    opacity: 0;
		    }


		  .ptSelectConversation-input ~ .fa-check-square {
		  	display: none !important;
		  }
		  .ptSelectConversation-input:checked ~ .fa-check-square {
		  	display: inline-block !important;
		  }
		  .ptSelectConversation-input:checked ~ .fa-square-o {
		  	display: none !important;
		  }
			.labelDropdown input[type="checkbox"] {
				display: inline-block !important;
			}
		    .fa-square-o,
		    .fa-check-square {
		    	display: inline-block !important;
		    	font-size: 2rem;
		    	-webkit-appearance: none;
				-moz-appearance: none;
				appearance: none;
		    	border: none;
		    	background: transparent;
		    	text-decoration: none;
		    	color: $alt;
		    	width: 2rem;
		    }

		    .ptSelectConversation-icon {
		    	position: absolute;
		    	top: calc(50% - 1rem);
		    	pointer-events: none
		    }


		}
	}
}

